자동 커밋 메시지

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
@@ -29,8 +29,32 @@
       <p>2024.6 노동자의 인권을 위해 노조 활동 선언</p>
       <p>2024.8 월급 다음날 노조 활동 중단 선언</p>
       <p>2024.9 서울 역세권 자가 구입(회사에서 2시간 거리)</p>
-      <!-- 필요한 만큼 텍스트를 추가하세요 -->
+      필요한 만큼 텍스트를 추가하세요
     </div>
   </div>
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Star Wars Opening Crawl</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="star-wars">
+        <div class="crawl">
+            <div class="title">
+                <p>Episode IV</p>
+                <h1>A New Hope</h1>
+            </div>
+            <p>It is a period of civil war...</p>
+            <p>Rebel spaceships, striking...</p>
+            <p>Pursued by the Empire's sinister agents...</p>
+            <!-- Add more text as needed -->
+        </div>
+    </div>
 </body>
 </html>
