자동 커밋 메시지

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,6 @@
       <p>2024.6 노동자의 인권을 위해 노조 활동 선언</p>
       <p>2024.8 월급 다음날 노조 활동 중단 선언</p>
       <p>2024.9 서울 역세권 자가 구입(회사에서 2시간 거리)</p>
-      필요한 만큼 텍스트를 추가하세요
     </div>
   </div>
 </body>
@@ -47,13 +46,25 @@
     <div class="star-wars">
         <div class="crawl">
             <div class="title">
-                <p>Episode IV</p>
-                <h1>A New Hope</h1>
+              <h1>"민주투사 전하늘"</h1>
             </div>
-            <p>It is a period of civil war...</p>
-            <p>Rebel spaceships, striking...</p>
-            <p>Pursued by the Empire's sinister agents...</p>
-            <!-- Add more text as needed -->
+            <p>[약력] </p>
+            <p>1988.10.3 7.8kg 초특급 우량아 통영 출생.</p>
+            <p>2000.12 본드 흡입, 쾌락의 문이 열리다.</p>
+            <p>2001.2 통영 두룡초등학교 무사히 졸업하다.</p>
+            <p>2003.4 인권 운동 첫걸음 두발 자유화를 시도. (당시 울프컷)</p>
+            <p>2004.2 통영중학교 졸업. (액시브 타고옴)</p>
+            <p>2005.6 몽정 시작. (꿈에 포켓몬스터 이슬이 나옴)</p>
+            <p>2006.11 첫사랑 고백 도전(삼행시까지 준비했으나 실패)</p>
+            <p>2007.2 울산공고 졸업.</p>
+            <p>2011.2 취업 전선에 참전.(면접때 팔꿈치 혀 닿는것 보여줌)</p>
+            <p>2011.7 삼성전자 입사.</p>
+            <p>2018.5 음악에 목숨을 걸다(코노 월평균 지출 15만원 달성)</p>
+            <p>2021.8 운동에 목슴을 걸다(마라톤 대회 10km 완주 후 성취감에 오열)</p>
+            <p>2024.3 엉덩이 가운데 쯔음에 중병 발생.(원인 불명이나 유추 가능)</p>
+            <p>2024.6 노동자의 인권을 위해 노조 활동 선언</p>
+            <p>2024.8 월급 다음날 노조 활동 중단 선언</p>
+            <p>2024.9 서울 역세권 자가 구입(회사에서 2시간 거리)</p>
         </div>
     </div>
 </body>
